@@ -10,6 +10,8 @@
 * Fix: xtype field in FieldsConfigurator is now a combobox
 * Fix: FieldsConfigurator was crashing when fired consequently for grid and form
 * Depr: :data_class_name option is deprecated, use :model
+* Impr: "gear" tool is now hidden on FieldsConfigurator
+* Impr: Grid/FormPanel layouts are now not stored into the netzke_preferences table unless the defaults are modified (cleaner table)
 
 = v0.5.5.1 - 2009-11-09
 * Compatibility with latest netzke-core
@@ -18,7 +20,7 @@
 * Compatibility with latest netzke-core
 * Regression: pressing "enter" was not submitting the form (FormPanel)
 * Regression: "Restore defaults" button was not working in FieldsConfigurator and PropertyEditor
-* Fix: excluding columns in FieldConfigurator was causing inconsistent column behavior (move/hide/resize)
+* Fix: excluding columns in FieldsConfigurator was causing inconsistent column behavior (move/hide/resize)
 * Fix: resolving conflicts with Ext.form.FormPanel's <tt>submit</tt> and <tt>load</tt> methods
 * New: rudimentary FileUploadField support in FormPanel (it will do a normal, non-AJAX, form submit)
 * New: Netzke::Window widget, supports persistent moving/resizing.
